@@ -3,7 +3,6 @@
 ** add a function graph2SOM that projects a graph on the grid
    (use projectGraph), create a class and a plot method for it
 ** add weights to observations
-** radius.type=gaussian
 ** implement weighted graphs projection
 ** change information about maxit (default = 5*n.obs, not 500 as claimed)
 
