@@ -124,7 +124,8 @@ adequate parameter values.')),
                              "canberra"="canberra", "binary"="binary",
                              "minkowski"="minkowski")),
                selectInput("radiustype", "Radius type:", 
-                           list("Piecewise linear"= "letremy")),
+                           list("Piecewise linear"="letremy", 
+                                "Gaussian"="gaussian")),
                uiOutput("scaling"),
                numericInput("randseed",
                             HTML("Set a random seed for reproducible results
