@@ -11,6 +11,7 @@ division by max distance
   Added ANOVA to summary of somSC for numeric and relational SOM
   Added pca initialization for numeric and korresp cases
   Added Kaski-Lagus error to quality function (numeric and relational cases)
+  Added Gaussian neighborhood type
 
 Code improvements:
   Changed default value of init.proto to "obs" for "relational" algorithm
